--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ repositories {
 	mavenCentral()
 }
 
+java.toolchain.languageVersion = JavaLanguageVersion.of(17)
+
 dependencies {
 	implementation "net.java.dev.jna:jna:5.12.1"
 	implementation "net.java.dev.jna:jna-platform:5.12.1"
